--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,5 +1,10 @@
 <div class="view">
     <label>{{todo.title}}</label>
+    <select [(ngModel)] = "todo.status"> 
+        <option value="Todo"></option>
+        <option value="Doing"></option>
+        <option value= "Done"></option>
+    </select>
     <div class="float-right">
         <button type="button" (click)= deleteTodo(todo) class="btn btn-danger btn-sm">Delete</button>
     </div>
