--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -7,6 +7,7 @@
         <option value= "Done">Done</option>
     </select>
     <div class="float-right">
-        <button type="button" (click)= deleteTodo(todo) class="btn btn-danger btn-sm">Delete</button>
+        <button type="button" (click)= "deleteTodo(todo)" class="btn btn-danger btn-sm">Delete</button>
+        <button type="button" (click)=  "editTodo(todo)" class="btn btn-danger btn-sm">Edit</button>
     </div>
 </div>
