--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <h1 align="center">Todo List</h1>
+<div>
+<a routerLink = "board">board</a>
+<a routerLink = "table">table</a>
+</div>
 <app-create-todo></app-create-todo>
-<app-board></app-board>
+
 
 <router-outlet></router-outlet>
