--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,6 +1,7 @@
 <div class="view">
     <label (dblclick)="isEditing = true">{{todo.title}}</label>
     <input *ngIf = "isEditing" type = "text" [(ngModel)] = "todo.title" (blur) = "isEditing = false">
+    <label>{{todo.description}}</label>
     <select [(ngModel)] = "todo.status"> 
         <option value="Todo">Todo</option>
         <option value="Doing">Doing</option>
